2009-10-28  Roland McGrath  <roland@redhat.com>

	* Makefile (dist-prepare): New target.
	(tag-for-dist): Target removed.
	(glibc-%.tar): Pattern rule removed.
	(%.tar): New pattern rule, does simple use of git archive.
	(dist-version): Remove variable definition.
	(dist): Just depend on that.  Add .tar.xz dependency.
	If dist-version variable not set on command line, depend on
	dist-prepare, re-invoke with dist-version set via git describe.

	* Makerules (%.xz): New pattern rule.

2009-11-03  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/syscalls.list: Add
	readahead.

2009-11-04  Jakub Jelinek  <jakub@redhat.com>

	* misc/sys/uio.h (preadv, pwritev): Fix type of last argument
	when -D_FILE_OFFSET_BITS=64.

	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h (fallocate): Fix types
	of last two arguments when -D_FILE_OFFSET_BITS=64.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h (fallocate): Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h (fallocate): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h (fallocate): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h (fallocate): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h (fallocate): Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h (fallocate): Likewise.

2009-09-05  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Support binutils 2.100 and 3.0.

2009-09-07  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate.c (struct locale_collate_t): Add
	unnamed_section_defined field.
	(collate_read): Test and set unnamed_section_defined.

	* posix/getconf.c (vars): Handle POSIX2_LINE_MAX in addition to
	_POSIX2_LINE_MAX.

2009-09-04  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: Support binutils 2.20.

2009-09-01  Andreas Schwab  <schwab@redhat.com>

	* hesiod/nss_hesiod/hesiod-grp.c (internal_gid_from_group): Fix
	parsing of group entry.

2009-09-02  Andreas Schwab  <schwab@redhat.com>
